added the /Part/{id} endpoint
